--- a/src/app/pages/account-profile/account-profile.component.html
+++ b/src/app/pages/account-profile/account-profile.component.html
@@ -48,6 +48,9 @@
                       >
                     </li>
                   </ng-container>
+                  <li class="nav-item cursor-pointer" (click)="logout()">
+                    <a class="nav-link">Đăng xuất</a>
+                  </li>
                 </div>
               </ul>
             </div>
