--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -3,79 +3,24 @@
     <div class="row">
       <div class="col">
         <div class="coupon-area">
-          <!-- coupon-accordion start -->
           <div class="coupon-accordion">
             <h3>
-              Returning customer?
-              <span class="coupon" id="showlogin">Click here to login</span>
+              Bạn có mã khuyến mãi?
+              <span class="coupon">Nhấn vào dây để nhập mã khuyến mãi</span>
             </h3>
-            <div class="coupon-content" id="checkout-login">
+            <div class="coupon-content">
               <div class="coupon-info">
-                <p>
-                  If you have shopped with us before, please enter your details
-                  in the boxes below. If you are a new customer, please proceed
-                  to the Billing &amp; Shipping section.
-                </p>
-                <form action="#">
-                  <p class="coupon-input form-row-first">
-                    <label
-                      >Username or email <span class="required">*</span></label
-                    >
-                    <input type="text" name="email" />
-                  </p>
-                  <p class="coupon-input form-row-last">
-                    <label>password <span class="required">*</span></label>
-                    <input type="password" name="password" />
-                  </p>
-                  <div class="clear"></div>
-                  <p>
-                    <button
-                      type="submit"
-                      class="button-login btn"
-                      name="login"
-                      value="Login">
-                      Login
-                    </button>
-                    <label class="remember"
-                      ><input type="checkbox" value="1" /><span
-                        >Remember</span
-                      ></label
-                    >
-                  </p>
-                  <p class="lost-password">
-                    <a href="#">Lost your password?</a>
-                  </p>
-                </form>
-              </div>
-            </div>
-          </div>
-          <!-- coupon-accordion end -->
-          <!-- coupon-accordion start -->
-          <div class="coupon-accordion">
-            <h3>
-              Have a coupon?
-              <span class="coupon" id="showcoupon"
-                >Click here to enter your code</span
-              >
-            </h3>
-            <div class="coupon-content" id="checkout-coupon">
-              <div class="coupon-info">
-                <form action="#">
+                <form>
                   <p class="checkout-coupon">
-                    <input type="text" placeholder="Coupon code" />
-                    <button
-                      type="submit"
-                      class="btn button-apply-coupon"
-                      name="apply_coupon"
-                      value="Apply coupon">
-                      Apply coupon
+                    <input type="text" placeholder="Mã khuyến mãi" />
+                    <button type="submit" class="btn button-apply-coupon">
+                      Thêm mã
                     </button>
                   </p>
                 </form>
               </div>
             </div>
           </div>
-          <!-- coupon-accordion end -->
         </div>
       </div>
     </div>
@@ -86,107 +31,42 @@
           <!-- billing-details-wrap start -->
           <div class="billing-details-wrap">
             <form action="#">
-              <h3 class="shoping-checkboxt-title">Billing Details</h3>
+              <h3 class="shoping-checkboxt-title">Hoá đơn chi tiết</h3>
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                   <p class="single-form-row">
-                    <label>First name <span class="required">*</span></label>
-                    <input
-                      type="text"
-                      name="First name"
-                      fdprocessedid="kyou7s" />
-                  </p>
-                </div>
-                <div class="col-lg-6">
-                  <p class="single-form-row">
-                    <label
-                      >Username or email <span class="required">*</span></label
-                    >
-                    <input
-                      type="text"
-                      name="Last name"
-                      fdprocessedid="z4vc89m" />
+                    <label>Họ và tên <span class="required">*</span></label>
+                    <input type="text" />
                   </p>
                 </div>
                 <div class="col-lg-12">
                   <p class="single-form-row">
-                    <label>Company name</label>
-                    <input type="text" name="email" fdprocessedid="gh8ocm" />
-                  </p>
-                </div>
-                <div class="col-lg-12 mb-20">
-                  <div class="single-form-row">
-                    <label>Country <span class="required">*</span></label>
-                    <select
-                      class="form-select"
-                      aria-label="Default select example">
-                      <option selected>Open this select menu</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <p class="single-form-row">
-                    <label
-                      >Street address <span class="required">*</span></label
-                    >
-                    <input
-                      type="text"
-                      placeholder="House number and street name"
-                      name="address"
-                      fdprocessedid="ibkv" />
+                    <label>Email <span class="required">*</span></label>
+                    <input type="text" />
                   </p>
                 </div>
                 <div class="col-lg-12">
                   <p class="single-form-row">
-                    <input
-                      type="text"
-                      placeholder="Apartment, suite, unit etc. (optional)"
-                      name="address"
-                      fdprocessedid="0s77f" />
+                    <label>Số điện thoại</label>
+                    <input type="text" />
                   </p>
                 </div>
                 <div class="col-lg-12">
                   <p class="single-form-row">
-                    <label>Town / City <span class="required">*</span></label>
-                    <input type="text" name="address" fdprocessedid="45lnkm" />
+                    <label>Loại nhận hàng</label>
+                    <input type="text" />
                   </p>
                 </div>
                 <div class="col-lg-12">
                   <p class="single-form-row">
-                    <label>State / County</label>
-                    <input type="text" name="address" fdprocessedid="wyitswd" />
-                  </p>
-                </div>
-                <div class="col-lg-12">
-                  <p class="single-form-row">
-                    <label
-                      >Postcode / ZIP <span class="required">*</span></label
-                    >
-                    <input type="text" name="address" fdprocessedid="qkub25" />
-                  </p>
-                </div>
-                <div class="col-lg-12">
-                  <p class="single-form-row">
-                    <label>Phone</label>
-                    <input type="text" name="address" fdprocessedid="e2fibd" />
-                  </p>
-                </div>
-                <div class="col-lg-12">
-                  <p class="single-form-row">
-                    <label>Email address <span class="required">*</span></label>
-                    <input
-                      type="text"
-                      name="Email address "
-                      fdprocessedid="43uul" />
+                    <label>Địa chỉ nhận</label>
+                    <input type="text" />
                   </p>
                 </div>
                 <div class="col-lg-12">
                   <p class="single-form-row m-0">
-                    <label>Order notes</label>
-                    <textarea class="w-100"></textarea>
+                    <label>Ghi chú</label>
+                    <textarea class="w-100" rows="10"></textarea>
                   </p>
                 </div>
               </div>
@@ -197,7 +77,7 @@
         <div class="col-lg-6 col-md-6">
           <!-- your-order-wrapper start -->
           <div class="your-order-wrapper">
-            <h3 class="shoping-checkboxt-title">Your Order</h3>
+            <h3 class="shoping-checkboxt-title">Đơn hàng của bạn</h3>
             <!-- your-order-wrap start-->
             <div class="your-order-wrap">
               <!-- your-order-table start -->
@@ -205,57 +85,57 @@
                 <table>
                   <thead>
                     <tr>
-                      <th class="product-name">Product</th>
-                      <th class="product-total">Total</th>
+                      <th class="product-name">Sản phẩm</th>
+                      <th class="product-total">Tổng tiền</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr class="cart_item">
                       <td class="product-name">
-                        Vestibulum suscipit
+                        Đồng hồ
                         <strong class="product-quantity"> × 1</strong>
                       </td>
                       <td class="product-total">
-                        <span class="amount">£165.00</span>
+                        <span class="amount">1.000.000đ</span>
                       </td>
                     </tr>
                     <tr class="cart_item">
                       <td class="product-name">
-                        Vestibulum magna
+                        Đồng hồ
                         <strong class="product-quantity"> × 1</strong>
                       </td>
                       <td class="product-total">
-                        <span class="amount">£50.00</span>
+                        <span class="amount">2.000.000đ</span>
                       </td>
                     </tr>
                   </tbody>
                   <tfoot>
                     <tr class="cart-subtotal">
-                      <th>Cart Subtotal</th>
-                      <td><span class="amount">£215.00</span></td>
+                      <th>Tổng hoá đơn</th>
+                      <td><span class="amount">3.000.000đ</span></td>
                     </tr>
                     <tr class="shipping">
-                      <th>Shipping</th>
+                      <th>Phí vận chuyển</th>
                       <td>
                         <ul>
                           <li>
                             <input type="radio" />
                             <label class="ms-1">
-                              Flat Rate: <span class="amount">£7.00</span>
+                              Chuyển nhanh: <span class="amount">30.000đ</span>
                             </label>
                           </li>
                           <li>
                             <input type="radio" />
-                            <label class="ms-1">Free Shipping:</label>
+                            <label class="ms-1">Miễn phí vận chuyển:</label>
                           </li>
                           <li></li>
                         </ul>
                       </td>
                     </tr>
                     <tr class="order-total">
-                      <th>Order Total</th>
+                      <th>Tổng thanh toán</th>
                       <td>
-                        <strong><span class="amount">£215.00</span></strong>
+                        <strong><span class="amount">3.000.030đ</span></strong>
                       </td>
                     </tr>
                   </tfoot>
@@ -266,44 +146,28 @@
               <!-- your-order-wrap end -->
               <div class="payment-method">
                 <div class="payment-accordion">
-                  <!-- ACCORDION START -->
-                  <h5>Direct Bank Transfer</h5>
+                  <h5>Chuyển khoản trực tiêp</h5>
                   <div class="payment-content">
                     <p>
-                      Make your payment directly into our bank account. Please
-                      use your Order ID as the payment reference. Your order
-                      won’t be shipped until the funds have cleared in our
-                      account.
+                      Thực hiện thanh toán trực tiếp vào tài khoản ngân hàng của
+                      chúng tôi. Vui lòng sử dụng ID đơn hàng của bạn làm tài
+                      liệu tham khảo thanh toán. Đơn đặt hàng của bạn sẽ không
+                      được chuyển cho đến khi tiền đã được xóa trong tài khoản
+                      của chúng tôi.
                     </p>
                   </div>
-                  <!-- ACCORDION END -->
-                  <!-- ACCORDION START -->
-                  <h5>Cheque Payment</h5>
-                  <div class="payment-content">
-                    <p>
-                      Please send your cheque to Store Name, Store Street, Store
-                      Town, Store State / County, Store Postcode.
-                    </p>
-                  </div>
-                  <!-- ACCORDION END -->
-                  <!-- ACCORDION START -->
                   <h5>PayPal</h5>
                   <div class="payment-content">
                     <p>
-                      Pay via PayPal; you can pay with your credit card if you
-                      don’t have a PayPal account.
+                      Thanh toán qua PayPal; bạn có thể thanh toán bằng thẻ tín
+                      dụng nếu bạn không có tài khoản PayPal.
                     </p>
                   </div>
-                  <!-- ACCORDION END -->
                 </div>
                 <div class="order-button-payment">
-                  <input
-                    type="submit"
-                    value="Place order"
-                    fdprocessedid="ai1mvd" />
+                  <button type="submit">Đặt hàng</button>
                 </div>
               </div>
-              <!-- your-order-wrapper start -->
             </div>
           </div>
         </div>
