--- a/src/app/pages/checkout/checkout.component.scss
+++ b/src/app/pages/checkout/checkout.component.scss
@@ -128,19 +128,6 @@
   }
 }
 
-.order-button-payment input {
-  background: #c89979;
-  border: medium none;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 600;
-  padding: 12px;
-  text-transform: uppercase;
-  width: 100%;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
 .payment-method {
   padding: 20px 30px;
 }
@@ -162,4 +149,17 @@ h5 {
 
 .order-button-payment {
   margin-top: 30px;
+
+  button {
+    background: #c89979;
+    border: medium none;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 12px;
+    text-transform: uppercase;
+    width: 100%;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
 }
