--- a/src/app/pages/collections/collections.component.html
+++ b/src/app/pages/collections/collections.component.html
@@ -114,8 +114,8 @@
             <div class="row">
               <div
                 class="col-lg-4 col-md-6"
-                *ngFor="let collection of collections">
-                <app-product-item [productItem]="collection"></app-product-item>
+                *ngFor="let product of productList">
+                <app-product-item [productItem]="product"></app-product-item>
               </div>
             </div>
           </div>
