--- a/src/app/pages/product-detail/product-detail.component.scss
+++ b/src/app/pages/product-detail/product-detail.component.scss
@@ -205,3 +205,31 @@
   background: #c89979;
   color: #fff;
 }
+
+.select-size-box {
+  .size-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 7px;
+  }
+
+  .select-label {
+    height: 48px;
+    border-radius: 4px;
+    font-weight: 500;
+    box-shadow: rgb(229, 229, 229) 0px 0px 0px;
+  }
+
+  .select-radio {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+  }
+
+  .select-label.active {
+    box-shadow: rgb(17, 17, 17) 0px 0px 0px 1px;
+  }
+}
