--- a/src/app/pages/account-profile/change-password/change-password.component.html
+++ b/src/app/pages/account-profile/change-password/change-password.component.html
@@ -23,6 +23,12 @@
             type="password"
             class="form-control"
             formControlName="confirmNewPassword" />
+          <small
+            *ngIf="
+              passwordForm.invalid && controls['confirmNewPassword'].touched
+            "
+            >Bạn cần nhập lại đúng mật khẩu ở trên</small
+          >
         </div>
       </div>
       <div class="button-box d-flex justify-content-end">
