--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -76,7 +76,7 @@
                   <div class="coupon">
                     <h3 class="mb-2">Khuyến mãi</h3>
                     <input
-                      class="input-text"
+                      class="input-text border me-2"
                       placeholder="Mã khuyến mãi"
                       type="text" />
                     <button
