--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -24,155 +24,147 @@
         </div>
       </div>
     </div>
-    <!-- checkout-details-wrapper start -->
-    <div class="checkout-details-wrapper">
-      <div class="row">
-        <div class="col-lg-6 col-md-6">
-          <!-- billing-details-wrap start -->
-          <div class="billing-details-wrap">
-            <form action="#">
-              <h3 class="shoping-checkboxt-title">Hoá đơn chi tiết</h3>
+    <form [formGroup]="orderForm" (submit)="onPlaceOrder()">
+      <div class="checkout-details-wrapper">
+        <div class="row">
+          <div class="col-lg-6 col-md-6">
+            <div class="billing-details-wrap">
+              <h3 class="shoping-checkboxt-title">Thông tin đặt hàng</h3>
               <div class="row">
-                <div class="col-lg-12">
-                  <p class="single-form-row">
-                    <label>Họ và tên <span class="required">*</span></label>
-                    <input type="text" />
-                  </p>
-                </div>
-                <div class="col-lg-12">
-                  <p class="single-form-row">
-                    <label>Email <span class="required">*</span></label>
-                    <input type="text" />
-                  </p>
-                </div>
-                <div class="col-lg-12">
-                  <p class="single-form-row">
-                    <label>Số điện thoại</label>
-                    <input type="text" />
-                  </p>
-                </div>
-                <div class="col-lg-12">
-                  <p class="single-form-row">
-                    <label>Loại nhận hàng</label>
-                    <input type="text" />
-                  </p>
-                </div>
-                <div class="col-lg-12">
-                  <p class="single-form-row">
-                    <label>Địa chỉ nhận</label>
-                    <input type="text" />
-                  </p>
-                </div>
-                <div class="col-lg-12">
-                  <p class="single-form-row m-0">
-                    <label>Ghi chú</label>
-                    <textarea class="w-100" rows="10"></textarea>
-                  </p>
-                </div>
+                <ng-container formGroupName="order">
+                  <div class="col-lg-12 form-group pb-4" required>
+                    <label class="form-label">Họ và tên</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      formControlName="customerName" />
+                  </div>
+                  <div class="col-lg-12 form-group pb-4" required>
+                    <label class="form-label">Số điện thoại</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      formControlName="phone" />
+                  </div>
+                  <div class="col-lg-12 form-group pb-4" required>
+                    <div class="position-relative">
+                      <div>
+                        <label class="form-label">Địa chỉ nhận hàng</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          formControlName="receivedAddress"
+                          #suggestionSearch
+                          (focus)="showSearchSuggestion()" />
+                      </div>
+                      <ng-container
+                        *ngIf="searchSuggestion$ | async as searchSuggestion">
+                        <div
+                          class="search-suggestion bg-white position-absolute"
+                          *ngIf="showSuggestion">
+                          <div
+                            class="search-item"
+                            *ngFor="let search of searchSuggestion"
+                            (mousedown)="patchAddressToForm(search)">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <span>{{ search.formattedAddress }}</span>
+                          </div>
+                        </div>
+                      </ng-container>
+                    </div>
+                  </div>
+                  <div class="col-lg-12 form-group pb-4">
+                    <label class="form-label">Ghi chú</label>
+                    <textarea class="w-100 form-control" rows="10"></textarea>
+                  </div>
+                </ng-container>
               </div>
-            </form>
+            </div>
           </div>
-          <!-- billing-details-wrap end -->
-        </div>
-        <div class="col-lg-6 col-md-6">
-          <!-- your-order-wrapper start -->
-          <div class="your-order-wrapper">
-            <h3 class="shoping-checkboxt-title">Đơn hàng của bạn</h3>
-            <!-- your-order-wrap start-->
-            <div class="your-order-wrap">
-              <!-- your-order-table start -->
-              <div class="your-order-table table-responsive">
-                <table>
-                  <thead>
-                    <tr>
-                      <th class="product-name">Sản phẩm</th>
-                      <th class="product-total">Tổng tiền</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr class="cart_item">
-                      <td class="product-name">
-                        Đồng hồ
-                        <strong class="product-quantity"> × 1</strong>
-                      </td>
-                      <td class="product-total">
-                        <span class="amount">1.000.000đ</span>
-                      </td>
-                    </tr>
-                    <tr class="cart_item">
-                      <td class="product-name">
-                        Đồng hồ
-                        <strong class="product-quantity"> × 1</strong>
-                      </td>
-                      <td class="product-total">
-                        <span class="amount">2.000.000đ</span>
-                      </td>
-                    </tr>
-                  </tbody>
-                  <tfoot>
-                    <tr class="cart-subtotal">
-                      <th>Tổng hoá đơn</th>
-                      <td><span class="amount">3.000.000đ</span></td>
-                    </tr>
-                    <tr class="shipping">
-                      <th>Phí vận chuyển</th>
-                      <td>
-                        <ul>
-                          <li>
-                            <input type="radio" />
-                            <label class="ms-1">
-                              Chuyển nhanh: <span class="amount">30.000đ</span>
-                            </label>
-                          </li>
-                          <li>
-                            <input type="radio" />
-                            <label class="ms-1">Miễn phí vận chuyển:</label>
-                          </li>
-                          <li></li>
-                        </ul>
-                      </td>
-                    </tr>
-                    <tr class="order-total">
-                      <th>Tổng thanh toán</th>
-                      <td>
-                        <strong><span class="amount">3.000.030đ</span></strong>
-                      </td>
-                    </tr>
-                  </tfoot>
-                </table>
-              </div>
-              <!-- your-order-table end -->
-
-              <!-- your-order-wrap end -->
-              <div class="payment-method">
-                <div class="payment-accordion">
-                  <h5>Chuyển khoản trực tiêp</h5>
-                  <div class="payment-content">
-                    <p>
-                      Thực hiện thanh toán trực tiếp vào tài khoản ngân hàng của
-                      chúng tôi. Vui lòng sử dụng ID đơn hàng của bạn làm tài
-                      liệu tham khảo thanh toán. Đơn đặt hàng của bạn sẽ không
-                      được chuyển cho đến khi tiền đã được xóa trong tài khoản
-                      của chúng tôi.
-                    </p>
-                  </div>
-                  <h5>PayPal</h5>
-                  <div class="payment-content">
-                    <p>
-                      Thanh toán qua PayPal; bạn có thể thanh toán bằng thẻ tín
-                      dụng nếu bạn không có tài khoản PayPal.
-                    </p>
-                  </div>
+          <div class="col-lg-6 col-md-6">
+            <div class="your-order-wrapper">
+              <h3 class="shoping-checkboxt-title">Chi tiết đơn hàng</h3>
+              <div class="your-order-wrap">
+                <div class="your-order-table table-responsive">
+                  <table>
+                    <thead>
+                      <tr>
+                        <th class="product-name">Sản phẩm</th>
+                        <th class="product-total">Tổng tiền</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <ng-container *ngIf="productList$ | async as productList">
+                        <tr
+                          class="cart_item"
+                          *ngFor="let product of productList">
+                          <td class="product-name">
+                            {{ product.productName }}
+                            <strong class="product-quantity">
+                              × {{ product.quality }}</strong
+                            >
+                          </td>
+                          <td class="product-total">
+                            <span class="amount">{{
+                              product.price * product.quality | formatPrice
+                            }}</span>
+                          </td>
+                        </tr>
+                      </ng-container>
+                    </tbody>
+                    <tfoot>
+                      <tr class="cart-subtotal">
+                        <th>Tổng hoá đơn</th>
+                        <td>
+                          <span class="amount">{{ total | formatPrice }}</span>
+                        </td>
+                      </tr>
+                      <tr class="shipping">
+                        <th>Phí vận chuyển</th>
+                        <td>{{ deliveryCharge | formatPrice }}</td>
+                      </tr>
+                      <tr class="order-total">
+                        <th>Tổng thanh toán</th>
+                        <td>
+                          <strong
+                            ><span class="amount">{{
+                              total + deliveryCharge | formatPrice
+                            }}</span></strong
+                          >
+                        </td>
+                      </tr>
+                    </tfoot>
+                  </table>
                 </div>
-                <div class="order-button-payment">
-                  <button type="submit">Đặt hàng</button>
+                <div class="payment-method">
+                  <div class="payment-accordion">
+                    <h5>Chuyển khoản trực tiếp</h5>
+                    <div class="payment-content">
+                      <p>
+                        Thực hiện thanh toán trực tiếp vào tài khoản ngân hàng
+                        của chúng tôi. Vui lòng sử dụng ID đơn hàng của bạn làm
+                        tài liệu tham khảo thanh toán. Đơn đặt hàng của bạn sẽ
+                        không được chuyển cho đến khi tiền đã được xóa trong tài
+                        khoản của chúng tôi.
+                      </p>
+                    </div>
+                    <h5>PayPal</h5>
+                    <div class="payment-content">
+                      <p>
+                        Thanh toán qua PayPal; bạn có thể thanh toán bằng thẻ
+                        tín dụng nếu bạn không có tài khoản PayPal.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="order-button-payment">
+                    <button type="submit">Đặt hàng</button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <!-- checkout-details-wrapper end -->
+    </form>
   </div>
 </div>
