--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -30,7 +30,7 @@
     </h4>
     <div class="price-box text-size-medium">
       <span class="new-price fw-600">{{
-        productPrices[0]?.price | formatPrice
+        minPriceOfProduct?.price | formatPrice
       }}</span>
       <!-- <span class="old-price">{{ productItem?.oldPrice }}</span> -->
     </div>
