--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -145,27 +145,20 @@
         transition: 0.3s;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 
-        & > li {
-          width: 33.333%;
-          float: left;
-          padding: 0 !important;
-          margin-right: 0px;
+        a {
+          padding: 0;
+          padding-bottom: 5px;
+          color: #333 !important;
+          display: block;
+          font-weight: 500;
+          text-transform: uppercase;
         }
 
         ul > li {
+          float: left;
+          margin-right: 0px;
           padding: 0;
-          color: $brown !important;
-          text-transform: capitalize;
-          display: block;
-          font-weight: 400;
-          margin-top: 8px;
-        }
-
-        & > li > a {
-          padding: 0;
-          margin-bottom: 10px;
-          padding-bottom: 5px;
-          color: $brown !important;
+          margin: 0;
         }
       }
     }
