--- a/src/app/pages/collections/collections.component.html
+++ b/src/app/pages/collections/collections.component.html
@@ -6,43 +6,35 @@
           <div class="shop-box-area">
             <!-- PRODUCT CATEGORIES  -->
             <div class="sidebar-categories-box shop-sidebar mb-30">
-              <h4 class="title">Product categories</h4>
+              <h4 class="title">Hãng sản phẩm</h4>
               <div class="category-sub-menu">
                 <ul>
-                  <li class="has-sub">
-                    <a>Sport Watches</a>
+                  <li
+                    (click)="resetSearch()"
+                    class="py-2 px-3 border mb-3 cursor-pointer">
+                    <a>Tất cả</a>
                   </li>
-                  <li class="has-sub">
-                    <a>Kitchen & Dining</a>
-                  </li>
-                  <li class="has-sub">
-                    <a>Casual Watches</a>
-                  </li>
-                  <li class="has-sub">
-                    <a>Dress Watches</a>
-                  </li>
-                  <li class="has-sub">
-                    <a>Digital Watches</a>
-                  </li>
-                  <li class="has-sub">
-                    <a>Crystal Watches</a>
+                  <li
+                    *ngFor="let category of categories"
+                    (click)="sortByCategory(category.id)"
+                    class="py-2 px-3 border mb-3 cursor-pointer">
+                    <a>{{ category.name }}</a>
                   </li>
                 </ul>
               </div>
             </div>
             <!-- FILTER BY PRICE  -->
             <div class="shop-sidebar mb-30">
-              <h4 class="title">Filter By Price</h4>
+              <h4 class="title">Lọc theo giá</h4>
               <div class="filter-price-content">
-                <form action="#" method="post">
+                <form>
                   <input type="range" min="0" max="100" class="w-100 mb-3" />
-
                   <div class="filter-price-wapper">
-                    <div class="add-to-cart-button">
-                      <span>FILTER</span>
+                    <div class="add-to-cart-button cursor-pointer">
+                      <span>Lọc</span>
                     </div>
                     <div class="filter-price-cont d-flex flex-row">
-                      <span>Price: </span>
+                      <span>Giá: </span>
                       <div class="input-type">
                         <input type="text" id="min-price" readonly />
                       </div>
@@ -57,25 +49,8 @@
             </div>
             <!-- FILTER BY COLOR  -->
             <div class="shop-sidebar mb-30">
-              <h4 class="title">Filter By Color</h4>
-              <ul class="category-widget-list">
-                <li><a>Red</a></li>
-                <li><a>White</a></li>
-              </ul>
-            </div>
-
-            <!-- PRODUCTS TAG  -->
-            <div class="shop-sidebar mb-30">
-              <h4 class="title">Products Tag</h4>
-              <div class="sidebar-tag">
-                <li><a href="">accesories</a></li>
-                <li><a href="">blouse</a></li>
-                <li><a href="">clothes</a></li>
-                <li><a href="">desktop</a></li>
-                <li><a href="">digital</a></li>
-                <li><a href="">fashion</a></li>
-                <li><a href="">woman</a></li>
-              </div>
+              <h4 class="title">Lọc theo size</h4>
+              <ul class="category-widget-list"></ul>
             </div>
           </div>
         </div>
@@ -97,13 +72,15 @@
                   </ul>
                 </div>
                 <div class="product-sort d-flex align-items-center">
-                  <p class="mr-1">Sort By:</p>
-                  <select class="form-select form-select-sm">
-                    <option selected>Relevance</option>
-                    <option value="1">Name(A - Z)</option>
-                    <option value="2">Name(Z - A)</option>
-                    <option value="3">Price(Low > High)</option>
-                    <option value="4">Rating(Lowest)</option>
+                  <select
+                    class="form-select form-select-sm"
+                    (change)="sortByCondition($event)">
+                    <option selected value="">Tất cả</option>
+                    <option value="newest">Mới nhất</option>
+                    <option value="oldest">Cũ nhất</option>
+                    <option value="highPopular">Phổ biến</option>
+                    <option value="priceASC">Giá (Thấp -> Cao)</option>
+                    <option value="priceDESC">Giá (Cao -> Thấp)</option>
                   </select>
                 </div>
               </div>
@@ -112,11 +89,13 @@
 
           <div class="shop-products-wrap">
             <div class="row">
-              <div
-                class="col-lg-4 col-md-6"
-                *ngFor="let product of productList">
-                <app-product-item [productItem]="product"></app-product-item>
-              </div>
+              <ng-container *ngIf="productList$ | async as productList">
+                <div
+                  class="col-lg-4 col-md-6"
+                  *ngFor="let product of productList">
+                  <app-product-item [productItem]="product"></app-product-item>
+                </div>
+              </ng-container>
             </div>
           </div>
         </div>
